--- a/Login/styles.css
+++ b/Login/styles.css
@@ -11,19 +11,23 @@ header{
 body{
     width: 100%;
     height: 100%;
+    background-color: tan;
+
 }
 #loginBox{
     margin: auto;
     width:30%;
-    height: 80vh;
+    height: 70vh;
     background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-content: center;
     text-align: center;
-    margin-top:5%;
+    margin-top:2%;
+    background-color:royalblue;
     font-size: x-large;
+    border-radius:30px;
 }
 .loginField{
     margin-top: 10%;
@@ -37,16 +41,21 @@ body{
     margin: auto;
     text-align: center;
     font-size: x-large;
+    border-style: none;
+
 }
 .loginBut{
     text-decoration: none;
     border: solid 1px blue;
     border-radius: 30px;
-    background-color: blue;
+    background-color: slategray;
     color:black;
     padding:10px;
     width: 30%;
     margin:auto;
     margin-top:2%;
 
+}
+p{
+    margin-bottom:20%;
 }
