--- a/Sign-Up/styles.css
+++ b/Sign-Up/styles.css
@@ -11,19 +11,21 @@ header{
 body{
     width: 100%;
     height: 100%;
+    background-color: tan;
 }
 #signupBox{
     margin: auto;
     width:30%;
     height: 80vh;
-    background-color: blanchedalmond;
+    background-color:royalblue;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-content: center;
     text-align: center;
-    margin-top:5%;
+    margin-top:2%;
     font-size: x-large;
+    border-radius:30px;
 }
 .signupField{
     margin-top: 10%;
@@ -37,12 +39,15 @@ body{
     margin: auto;
     text-align: center;
     font-size: x-large;
+    border-style: none;
+
 }
+
 .signupBut{
     text-decoration: none;
     border: solid 1px blue;
     border-radius: 30px;
-    background-color: blue;
+    background-color:slategray;
     color:black;
     padding:10px;
     width: 30%;
