--- a/payment/styles.css
+++ b/payment/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     
 }
-
+/*Background Image*/
 .bg-image {
         background-image:url("eggs.jpeg") ;
     background-position:left;
@@ -13,25 +13,7 @@
     height: 100%;
     }
    
-h1{
- margin-left: 45%;
- margin-right: 50%;
- margin-top: 100px;
- width: 400px;
-}
-table{
-    margin-left: 175px;
-    font-size: larger;
-}
-
-button{
-margin-left: 25px;
-}
-
-.btn{
-    display: flex;
-    justify-content: center;
-}
+/*Box on left side of screen*/
 article{
 opacity: 1;
     border: 1px solid black;
@@ -47,6 +29,7 @@ color: white;
     justify-content: space-around;
     margin-top: 50px;
 }
+/*Buttons on  bottom  */
 a{
     margin-top: 800px;
     display: block;
@@ -88,6 +71,7 @@ a{
   a:hover:after{
     width: 100%;
   }
+  /*Remove button*/
   .remove{
       border-radius: 10px;
       padding: 5px;
