--- a/payment/styles.css
+++ b/payment/styles.css
@@ -4,7 +4,6 @@
 }
 /*Background Image*/
 .bg-image {
-
   background-image: url("eggs.jpeg");
   background-position: left;
   background-repeat: no-repeat;
@@ -40,22 +39,22 @@ article {
   height: 100%;
   margin-left: 500px;
 
-        background-image:url("eggs.jpeg") ;
-    background-position:left;
-    background-repeat: no-repeat;
-    background-size:1100px;
-    position: relative;
-    height: 100%;
-    }
-   
+  background-image: url("eggs.jpeg");
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: 1100px;
+  position: relative;
+  height: 100%;
+}
+
 /*Box on left side of screen*/
-article{
-opacity: 1;
-    border: 1px solid black;
-    width: 700px;
-   background-color: rgb(53, 51, 49);
-   height: 100%;
-   margin-left: 500px;
+article {
+  opacity: 1;
+  border: 1px solid black;
+  width: 700px;
+  background-color: rgb(53, 51, 49);
+  height: 100%;
+  margin-left: 500px;
 
   float: right;
   color: white;
@@ -120,58 +119,57 @@ a:hover:after {
 }
 
 /*Buttons on  bottom  */
-a{
-    margin-top: 800px;
-    display: block;
-    width: 200px;
-    height: 40px;
-    line-height: 40px;
-    font-size: 18px;
-    font-family: sans-serif;
-    text-decoration: none;
-    color: rgb(5, 5, 5);
-    border: 3px solid white;
-    letter-spacing: 2px;
-    text-align: center;
-    position: relative;
-    transition: all .35s;
-    margin-left: 25px;
-    margin-right: 25px;
-    padding:20px;
-    color: white;
-  }
-  
-  a span{
-    position: relative;
-    z-index: 2;
-  }
-  
-  a:after{
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.563);
-    transition: all .35s;
-    color: black;
-  }
- 
-  a:hover:after{
-    width: 100%;
-  }
-  /*Remove button*/
-  .remove{
-      border-radius: 10px;
-      padding: 5px;
-      background-color: white;
-      color: orange;
-      border: 1px solid white;
-  }
-  .remove:hover{
-      color: black;
-      background-color: orange;
-      border: 1px solid black;
-  }
+a {
+  margin-top: 800px;
+  display: block;
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 18px;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: rgb(5, 5, 5);
+  border: 3px solid white;
+  letter-spacing: 2px;
+  text-align: center;
+  position: relative;
+  transition: all 0.35s;
+  margin-left: 25px;
+  margin-right: 25px;
+  padding: 20px;
+  color: white;
+}
 
+a span {
+  position: relative;
+  z-index: 2;
+}
+
+a:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.563);
+  transition: all 0.35s;
+  color: black;
+}
+
+a:hover:after {
+  width: 100%;
+}
+/*Remove button*/
+.remove {
+  border-radius: 10px;
+  padding: 5px;
+  background-color: white;
+  color: orange;
+  border: 1px solid white;
+}
+.remove:hover {
+  color: black;
+  background-color: orange;
+  border: 1px solid black;
+}
