--- a/manager-page/styles.css
+++ b/manager-page/styles.css
@@ -1,5 +1,5 @@
-*{
-    background-color:azure
+body{
+    background-image: linear-gradient(180deg, azure, white);
 }
 
 img{
@@ -7,6 +7,18 @@ img{
     max-height: auto;
 }
 
+h1{
+    text-align: center;
+}
+li{
+    margin-bottom: 50px;
+}
+
 .menu-box{
-    display: flex;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.menu-items{
+    background-color: rgb(153, 218, 207);
+    border-style: solid;
 }
