--- a/Login/styles.css
+++ b/Login/styles.css
@@ -41,6 +41,9 @@ body {
   font-size: x-large;
   border-style: none;
 }
+a {
+  color: crimson;
+}
 .loginBut {
   text-decoration: none;
   border: solid 1px blue;
@@ -53,5 +56,8 @@ body {
   margin-top: 2%;
 }
 p {
-  margin-bottom: 20%;
+  margin-top: 4%;
+}
+label {
+  margin-bottom: 4%;
 }
