--- a/Sign-Up/styles.css
+++ b/Sign-Up/styles.css
@@ -40,7 +40,9 @@ body {
   font-size: x-large;
   border-style: none;
 }
-
+a {
+  color: crimson;
+}
 .signupBut {
   text-decoration: none;
   border: solid 1px blue;
@@ -50,5 +52,11 @@ body {
   padding: 10px;
   width: 30%;
   margin: auto;
+  margin-top: 2%;
+}
+label {
+  margin-bottom: 3%;
+}
+p {
   margin-top: 2%;
 }
