--- a/Sign-Up/styles.css
+++ b/Sign-Up/styles.css
@@ -10,7 +10,7 @@ header {
 body {
   width: 100%;
   height: 100%;
-  background-color: tan;
+  background-color: rgb(206, 123, 16);
 }
 #signupBox {
   margin: auto;
