--- a/Login/styles.css
+++ b/Login/styles.css
@@ -10,7 +10,8 @@ header {
 body {
   width: 100%;
   height: 100%;
-  background-color: rgb(206, 123, 16);
+  background-image: url('../menue/download.jpg');
+
 }
 #loginBox {
   margin: auto;
