--- a/payment/styles.css
+++ b/payment/styles.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-   
+   overflow: hidden;
 }
 /*Background Image*/
 .bg-image {
@@ -10,7 +10,7 @@
     background-repeat: no-repeat;
     background-size:1200px;
     position: relative;
-    height: 100%;
+    height: fit-content;
     }
    
 
@@ -24,7 +24,6 @@
   display: flex;
   justify-content: space-around;
   margin-top: 50px;
-  
   height: 40px;
 }
 
@@ -36,17 +35,17 @@
 }
 
 article{
-opacity: 1;
+
     border: 1px solid black;
     width: 700px;
    background-color: rgb(53, 51, 49);
-   height: 100%;
+   min-height: 100vh;
   float: right;
   color: white;
 }
 
 a{
-    margin-top: 20px;
+    margin-top: px;
     display: block;
     width: 200px;
     height: 40px;
