--- a/recipt-page/styles.css
+++ b/recipt-page/styles.css
@@ -1,14 +1,29 @@
 body{
-    background-color: aqua;
+    background-color: gray;
     margin: 50px;
     background-image:url("https://www.washingtonian.com/wp-content/uploads/2021/07/2Fiftys-1500x1000.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 50%;
     background-position-x: 50px;
-    background-position-y: 250px;
+    background-position-y: 195px;
 }
 
+button{
+    font-size: 25px;
+    width: 99%;
+    height: 10%;
+    margin-top: 10px;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.column p{
+    font-size: 25px;
+}
 .contaner{
     margin-top: 60px;
 }
@@ -19,7 +34,7 @@ body{
     padding: 15px;
     background-color: red;
     margin-left: 730px;
-    
+
 }
 
 .itemsBox{
@@ -37,10 +52,16 @@ body{
 
 h1{
     border-bottom: 5px solid black;
+    
 }
 
 .newTitle{
     font-size: 60px;
     border-bottom: 5px solid black;
     justify-self: center;
+}
+
+li{
+    padding-bottom: 15px;
+    font-size: 20px;
 }
