--- a/recipt-page/styles.css
+++ b/recipt-page/styles.css
@@ -3,7 +3,6 @@ body{
     margin: 50px;
     background-image:url("https://www.washingtonian.com/wp-content/uploads/2021/07/2Fiftys-1500x1000.jpg");
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: 50%;
     background-position-x: 50px;
     background-position-y: 195px;
@@ -33,7 +32,7 @@ button{
     height: fit-content;
     padding: 15px;
     background-color: red;
-    margin-left: 730px;
+    margin-left: 58%;
 
 }
 
