--- a/manager-page/styles.css
+++ b/manager-page/styles.css
@@ -1,3 +1,8 @@
+*
+{
+  font-family: 'Open Sans', sans-serif;
+}
+
 body {
   background-image: linear-gradient(180deg, rgb(66, 135, 245), white);
 }
