--- a/recipt-page/styles.css
+++ b/recipt-page/styles.css
@@ -6,6 +6,7 @@ body{
     background-size: 50%;
     background-position-x: 50px;
     background-position-y: 195px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 button{
