--- a/Login/styles.css
+++ b/Login/styles.css
@@ -10,6 +10,7 @@ header {
 }
 body {
   background-image: linear-gradient(180deg, rgb(66, 135, 245), white);
+  height: 200vh;
 }
 #loginBox {
   margin: auto;
