--- a/Sign-Up/styles.css
+++ b/Sign-Up/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 header {
   text-align: center;
@@ -11,7 +11,6 @@ header {
 body {
   background-image: linear-gradient(180deg, rgb(66, 135, 245), white);
   height: 200vh;
-
 }
 #signupBox {
   margin: auto;
