--- a/payment/styles.css
+++ b/payment/styles.css
@@ -8,7 +8,7 @@
         background-image:url("eggs.jpeg") ;
     background-position:left;
     background-repeat: no-repeat;
-    background-size:1200px;
+    background-size:1300px;
     position: relative;
     height: fit-content;
     }
@@ -20,31 +20,33 @@
     justify-content: center;
 
 }
+/* Heading*/
 .tablehead {
   display: flex;
   justify-content: space-around;
   margin-top: 50px;
   height: 40px;
+  color: white;
 }
 
 
 .content{
- 
+ background-color: black;
     height: 550px;
     overflow-y: auto;
+    width: 500px;
 }
 
 article{
  
-    width: 700px;
+    width: 500px;
    background-color: black;
    min-height: 100vh;
   float: right;
   color: white;
 }
-
-a{
-
+/*Buttons with left to right animation*/
+.a1{
     margin-top: 10px;
     display: block;
     width: 200px;
@@ -66,12 +68,12 @@ a{
 
   }
   
-  a span{
+  .a1 span{
     position: relative;
     z-index: 2;
   }
   
-  a:after{
+  .a1:after{
     position: absolute;
     content: "";
     top: 0;
@@ -83,7 +85,7 @@ a{
     color: black;
   }
  
-  a:hover:after{
+  .a1:hover:after{
     width: 100%;
   }
  
@@ -92,7 +94,8 @@ a{
       display: flex;
       font-size: x-large;
       margin-top: 25px;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    color: black;
     
      
   }
@@ -105,6 +108,9 @@ a{
      margin-top: 15px;
      padding: 5px;
    display: none;
+
+
+
 
   }
   input{
@@ -120,13 +126,16 @@ a{
 }
 
 
-.hvr-ripple-out {
+.method {
   text-align: center;
-  width: 105px;
-  background-color: white;
-
-  position: relative;
+  width: 200px;
+  background-color: black;
+  color: white;
+  border-radius: 40px;
+  font-size: x-large;
+  border: 2px solid white;
 }
+
 
 
 .f {
@@ -141,11 +150,134 @@ a{
 }
 
 
-
+/* Table content*/
 #items{
   color: white;
   font-size: 50px;
  
 }
- 
 
+
+/*Resturant Name */
+#name{
+display: flex;
+justify-content: center;
+font-size: 40px;
+}
+
+/* List of scrollable text styling*/
+.scroller {
+  height: 1.2em;
+  line-height: 1.2em;
+  position: relative;
+  overflow: hidden;
+  font-size: 40px;
+margin-left: 200px;
+margin-top: 20px;
+}
+.scroller > span {
+  position: absolute;
+  top: 0;
+  animation: slide 5s infinite;
+  font-weight: bold;
+  
+}
+/*Adds Sliding animation*/
+@keyframes slide {
+  0% {
+    top: 0;
+  }
+  25% {
+    top: -1.2em;
+  }
+  50% {
+    top: -2.4em;
+  }
+  75% {
+    top: -3.6em;
+  }
+}
+
+.open-button{
+  text-align: center;
+  width: 200px;
+  background-color: black;
+  color: white;
+  border-radius: 40px;
+  font-size: x-large;
+  border: 2px solid white;
+}
+
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=text] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=text]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;}
+
+  #total{
+    color: white;
+    font-size: xx-large;
+    text-decoration: none;
+  }
+table{
+  width: 900px;
+}
+  table td{
+ border-bottom: 2px solid white;
+ border-top: 2px solid white;
+width: 500px;
+  }
+  table tr{
+    width: auto;
+  }
+  
+  table td p{
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
