--- a/payment/styles.css
+++ b/payment/styles.css
@@ -212,8 +212,8 @@ margin-top: 20px;
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  top: 250px;
+  left: 650px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
@@ -262,12 +262,20 @@ margin-top: 20px;
   opacity: 1;}
 
   #total{
-    color: white;
+    color:black;
     font-size: xx-large;
     text-decoration: none;
+    border: 2px solid silver;
+   background-color: silver;
+  }
+  #total:hover{
+    color: blue;
+    background-color:  white;
+    border: 2px solid purple;
+   
   }
 table{
-  width: 900px;
+  width: 500px;
 }
   table td{
  border-bottom: 2px solid white;
