--- a/menue/styles.css
+++ b/menue/styles.css
@@ -102,3 +102,25 @@ table {
   font-size: xx-large;
   margin-bottom: 75px;
 }
+
+.toolTip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.toolTip .toolTipText {
+  visibility: hidden;
+  width: fit-content;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.toolTip:hover .toolTipText {
+  visibility: visible;
+}
