changed from jpeg to png on manager page cross

--- a/manager-page/styles.css
+++ b/manager-page/styles.css
@@ -20,7 +20,7 @@ img {
 }
 
 li:hover {
-  background-image: url("img/cross.jpg");
+  background-image: url("img/cross.png");
   background-position: center center;
 }
 li:hover img {
