--- a/manager-page/styles.css
+++ b/manager-page/styles.css
@@ -60,6 +60,15 @@ li {
   padding: 5px;
   margin-top: 20px;
 }
+.logout {
+  text-decoration: none;
+  padding:2vh;
+  margin: 1vh;
+  border:1px solid white;
+  background-color: white;
+  border-style: inset;
+
+}
 .addSys input {
   height: 10%;
   text-align: center;
