--- a/manager-page/styles.css
+++ b/manager-page/styles.css
@@ -1,5 +1,9 @@
 * {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: x-large;
 }
 
 body {
@@ -13,8 +17,8 @@ hr {
 
 img {
   background-color: inherit;
-  width: 15vh;
-  height: 15vh;
+  width: 19vh;
+  height: 19vh;
   margin: auto;
   opacity: 0.8;
 }
@@ -25,7 +29,7 @@ li:hover {
 }
 li:hover img {
   position: relative;
-  z-index: -2;
+  /* z-index: -2; */
 }
 li:hover p {
   position: relative;
@@ -34,6 +38,9 @@ li:hover p {
 
 h1 {
   text-align: center;
+  width:20%;
+  margin: auto;
+  background-color: inherit;
 }
 ul {
   display: flex;
@@ -41,15 +48,18 @@ ul {
   justify-content: space-between;
   align-content: space-between;
   list-style: none;
+  
+  flex-basis: 25%;
 }
 li {
   display: flex;
   flex-direction: column;
   margin: 2vh;
-  width: 20%;
+  width: 21%;
   height: auto;
   align-content: center;
   justify-content: center;
+  text-align: center;
 }
 .addSys {
   height: 30vh;
@@ -67,6 +77,9 @@ li {
   border:1px solid white;
   background-color: white;
   border-style: inset;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  margin-left: 0;
 
 }
 .addSys input {
@@ -121,7 +134,7 @@ li {
   margin: auto;
 } */
 .menu-box {
-  margin-left: 20%;
+  margin-left: 20%;aaaaaaaaaaaaaaaaaaaaaaaaaaa
   width: fit-content;
   height: fit-content;
   margin-right: 20%;
