--- a/payment/styles.css
+++ b/payment/styles.css
@@ -232,6 +232,14 @@ margin-top: 20px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
+.form-popup1 {
+  display: none;
+  position: fixed;
+  top: 250px;
+  left: 650px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
 
 /* Add styles to the form container */
 .form-container {
@@ -282,16 +290,23 @@ margin-top: 20px;
     text-decoration: none;
    background-color: white;
    border: 1px solid white;
-
-   
+  margin-left: 170px;
   }
-  #total:hover{
+
+  #total1{
+    color:#5B84B1FF;
+    font-size: xx-large;
+    text-decoration: none;
+   background-color: white;
+   border: 1px solid black;
+  
+  }
+  #total1:hover{
     color: red;
     background-color:  white;
     border: 2px solid purple;
-   
-   
   }
+  
 table{
   width: 500px;
 }
@@ -317,5 +332,14 @@ width: 500px;
   }
   #tip:hover{
     cursor: pointer;
-    color: #5B84B1FF;
+    color: white;
+    background-color: salmon;
+
+  }
+  #taxAmount{
+    width: 70px;
+    border-radius: 10px;
+    background-color: white;
+    border: 2px solid black;
+  font-size: 15px;
   }
