--- a/payment/styles.css
+++ b/payment/styles.css
@@ -285,26 +285,26 @@ margin-top: 20px;
   opacity: 1;}
 
   #total{
-    color:#5B84B1FF;
+    color: White;
     font-size: xx-large;
     text-decoration: none;
-   background-color: white;
-   border: 1px solid white;
+ 
+   
   margin-left: 170px;
   }
 
   #total1{
-    color:#5B84B1FF;
+    color:White;
     font-size: xx-large;
     text-decoration: none;
-   background-color: white;
-   border: 1px solid black;
+   background-color: #5B84B1FF;
+   border: 1px solid white;
   
   }
   #total1:hover{
-    color: red;
-    background-color:  white;
-    border: 2px solid purple;
+    color: black;
+    background-color:  lightblue;
+    border: 2px solid white;
   }
   
 table{
