added total for the current cart

--- a/menue/styles.css
+++ b/menue/styles.css
@@ -124,3 +124,13 @@ table {
 .toolTip:hover .toolTipText {
   visibility: visible;
 }
+
+h2{
+  text-align:center;
+  font-size:30px;
+}
+
+#total{
+  text-align:center;
+  font-size:30px;
+}
