--- a/manager-page/styles.css
+++ b/manager-page/styles.css
@@ -41,7 +41,7 @@ li:hover p {
 
 h1 {
   text-align: center;
-  width: 20%;
+  width: 5vw;
   margin: auto;
   background-color: inherit;
 }
@@ -77,7 +77,6 @@ li {
   text-decoration: none;
   padding: 2vh;
   margin: 1vh;
-  border: 1px solid white;
   background-color: white;
   border-style: inset;
   border-bottom-left-radius: 30px;
